[package]
name = "lists"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"

[dev-dependencies]
criterion = "0.3.3"
im-rc = "15.0.0"

[[bench]]
name = "benchmarks"
harness = false