[package]
name = "im_lists"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattwparas/im-lists"
keywords = ["immutable", "unrolled-linked-list", "persistent", "list", "linked-list"]
description = "Persistent unrolled linked lists"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"

[dev-dependencies]
criterion = "0.3.5"
im-rc = "15.0.0"
proptest = "1.0.0"

[[bench]]
name = "benchmarks"
harness = false